--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-<link href="/styles/main-e3cb6.css" rel="stylesheet"></head>
+</head>
 
 <body>
 
-<script type="text/javascript" src="/scripts/main-18315.js"></script></body>
+</body>
 
 </html>
